derive/tests/compile-fail/variable_length_fields.stderr
error: variable length field must specify #[length = ""]
  --> $DIR/variable_length_fields.rs:14:17
   |
14 |     var_length: Vec<u8>,
   |                 ^^^
